[package]
name = "cliffs_of_moher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = { version = "0.17.5", features = ["rayon"] }
peroxide = { version = "0.34.0", features = ["parquet"] }
rayon = "1.7.0"
